--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ckeditor5": "^43.2.0",
     "ckeditor5-premium-features": "^43.2.0",
     "dompurify": "^3.1.7",
+    "dotenv": "^16.4.5",
     "json-server": "^1.0.0-beta.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
