--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_REACT_APP_DOMAIN=https://learnimo.liara.run/
+VITE_REACT_APP_DOMAIN=https://learnimo.liara.run/v1/
 
+# https://learnimoo.filedl.me/v1/
